Group-dashboard scss align fix

--- a/timApp/static/scripts/tim/plugin/group-dashboard/group-dashboard.component.scss
+++ b/timApp/static/scripts/tim/plugin/group-dashboard/group-dashboard.component.scss
@@ -43,7 +43,7 @@
 .group-badge-area {
     display: flex;
     flex-wrap: wrap;
-    align-items: baseline;
+    align-items: center;
 }
 
 .badge {
